--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   height: 102vh;
   overflow: hidden;
-  background: url("/images/9.jpg");
+  background: url("images/9.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
